# clox

./: .clangd  .gitignore  CMakeLists.txt  default.vim  main.c  temp.c  temp2.c  todo.md
header/: chunk.h  common.h  compiler.h  customType.h  debug.h  logging.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  logging.c  main.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
test/: tests.c
